test(leon): make overlay contract JVM-compatible